Update command data for Toyota/Tundra

--- a/tests/test_cases/2025/command_support.yaml
+++ b/tests/test_cases/2025/command_support.yaml
@@ -340,6 +340,7 @@ unsupported_commands_by_ecu:
   - 750.758.2115|e=2A,fc=1:TOYOTA_1_SET_2,TOYOTA_2_SET_2,TOYOTA_3_SET_2,TOYOTA_4_SET_2,TOYOTA_5_SET_2,TOYOTA_TP_2_FL,TOYOTA_TP_2_FR,TOYOTA_TP_2_RL,TOYOTA_TP_2_RR,TOYOTA_TP_2_SPARE
   - 750.758.2116
   - 750.758.2116|e=2A,fc=1:TOYOTA_TT_FL,TOYOTA_TT_FL_V1,TOYOTA_TT_FR,TOYOTA_TT_FR_V1,TOYOTA_TT_RL,TOYOTA_TT_RL_V1,TOYOTA_TT_RR,TOYOTA_TT_RR_V1,TOYOTA_TT_SPARE,TOYOTA_TT_SPARE_V1
+  - 750.758.2130|e=2A,ta=2A,fc=1:TOYOTA_TIRE_P_FL,TOYOTA_TIRE_P_FR,TOYOTA_TIRE_P_RL,TOYOTA_TIRE_P_RR,TOYOTA_TIRE_P_SPARE,TOYOTA_TP_FL,TOYOTA_TP_FR,TOYOTA_TP_RL,TOYOTA_TP_RR,TOYOTA_TP_SPARE
   - 750.758.221004
   - 750.758.221005
   - 750.758.222021
@@ -374,6 +375,7 @@ unsupported_commands_by_ecu:
   "7D0":
   - 7D0.7D8.2162:TOYOTA_PARKING_BRAKE
   "7D2":
+  - 7D2.7DA.221002:TOYOTA_BAT_VOLTAGE
   - 7D2.7DA.2210A2:TOYOTA_RM_TQ,TOYOTA_RM_TQ_REQ
   - 7D2.7DA.2210A6:TOYOTA_M_INVRT_MAX_T,TOYOTA_RM_INVRT_COOL_T
   - 7D2.7DA.221609:TOYOTA_HVBAT_CHRG_V
