--- a/tests/test_cases/2025/commands/700.708.221075.yaml
+++ b/tests/test_cases/2025/commands/700.708.221075.yaml
@@ -1,14 +1,14 @@
 command_id: 700.708.221075
 test_cases:
 - expected_values:
-    TOYOTA_INTERCOOLER_WP_VSS: 600300.6764
-  response: 708056210758C6B
+    TOYOTA_INTERCOOLER_WP_VSS: 529456.4276
+  response: 7080562107580CD
 - expected_values:
-    TOYOTA_INTERCOOLER_WP_VSS: 601420.2728
-  response: 708056210758C9A
+    TOYOTA_INTERCOOLER_WP_VSS: 603778.5716
+  response: 708056210758CFD
 - expected_values:
-    TOYOTA_INTERCOOLER_WP_VSS: 608923.9508
-  response: 708056210758DD5
+    TOYOTA_INTERCOOLER_WP_VSS: 609972.0836
+  response: '708056210758E01'
 - expected_values:
-    TOYOTA_INTERCOOLER_WP_VSS: 619762.5968
-  response: 708056210758F9C
+    TOYOTA_INTERCOOLER_WP_VSS: 655899.3572
+  response: '708056210759589'
