--- a/tests/test_cases/2025/commands/700.708.221088.yaml
+++ b/tests/test_cases/2025/commands/700.708.221088.yaml
@@ -4,5 +4,8 @@ test_cases:
     TOYOTA_EXHAUST_VVT_ANGLE_B1: 0
   response: '708056210880000'
 - expected_values:
-    TOYOTA_EXHAUST_VVT_ANGLE_B1: 0.07811
-  response: '708056210880008'
+    TOYOTA_EXHAUST_VVT_ANGLE_B1: 12.48847
+  response: 7080562108804FF
+- expected_values:
+    TOYOTA_EXHAUST_VVT_ANGLE_B1: 37.54353
+  response: 708056210880F05
