--- a/tests/test_cases/2025/commands/700.708.2210A2.yaml
+++ b/tests/test_cases/2025/commands/700.708.2210A2.yaml
@@ -1,6 +1,78 @@
 command_id: 700.708.2210A2
 test_cases:
 - expected_values:
+    TOYOTA_AF_LEARN_HIGH_PORT_B1: 13.13725
+    TOYOTA_AF_LEARN_IDLE_PORT_B1: 5.68627
+    TOYOTA_AF_LEARN_LOW_PORT_B1: 2.94118
+    TOYOTA_AF_LEARN_MID1_PORT_B1: 3.72549
+    TOYOTA_AF_LEARN_MID2_PORT_B1: 13.13725
+  response: |-
+    70810086210A28E8789
+    70821A1A10000000000
+- expected_values:
+    TOYOTA_AF_LEARN_HIGH_PORT_B1: 13.13725
+    TOYOTA_AF_LEARN_IDLE_PORT_B1: 6.07843
+    TOYOTA_AF_LEARN_LOW_PORT_B1: 2.94118
+    TOYOTA_AF_LEARN_MID1_PORT_B1: 3.72549
+    TOYOTA_AF_LEARN_MID2_PORT_B1: 13.13725
+  response: |-
+    70810086210A28F8789
+    70821A1A10000000000
+- expected_values:
+    TOYOTA_AF_LEARN_HIGH_PORT_B1: 13.13725
+    TOYOTA_AF_LEARN_IDLE_PORT_B1: 6.47059
+    TOYOTA_AF_LEARN_LOW_PORT_B1: 2.94118
+    TOYOTA_AF_LEARN_MID1_PORT_B1: 3.72549
+    TOYOTA_AF_LEARN_MID2_PORT_B1: 13.13725
+  response: |-
+    70810086210A2908789
+    70821A1A10000000000
+- expected_values:
+    TOYOTA_AF_LEARN_HIGH_PORT_B1: 13.13725
+    TOYOTA_AF_LEARN_IDLE_PORT_B1: 6.47059
+    TOYOTA_AF_LEARN_LOW_PORT_B1: 2.94118
+    TOYOTA_AF_LEARN_MID1_PORT_B1: 4.11765
+    TOYOTA_AF_LEARN_MID2_PORT_B1: 13.13725
+  response: |-
+    70810086210A290878A
+    70821A1A10000000000
+- expected_values:
+    TOYOTA_AF_LEARN_HIGH_PORT_B1: 13.13725
+    TOYOTA_AF_LEARN_IDLE_PORT_B1: 6.47059
+    TOYOTA_AF_LEARN_LOW_PORT_B1: 2.94118
+    TOYOTA_AF_LEARN_MID1_PORT_B1: 4.5098
+    TOYOTA_AF_LEARN_MID2_PORT_B1: 13.13725
+  response: |-
+    70810086210A290878B
+    70821A1A10000000000
+- expected_values:
+    TOYOTA_AF_LEARN_HIGH_PORT_B1: 13.13725
+    TOYOTA_AF_LEARN_IDLE_PORT_B1: 6.47059
+    TOYOTA_AF_LEARN_LOW_PORT_B1: 2.94118
+    TOYOTA_AF_LEARN_MID1_PORT_B1: 4.90196
+    TOYOTA_AF_LEARN_MID2_PORT_B1: 13.13725
+  response: |-
+    70810086210A290878C
+    70821A1A10000000000
+- expected_values:
+    TOYOTA_AF_LEARN_HIGH_PORT_B1: 13.13725
+    TOYOTA_AF_LEARN_IDLE_PORT_B1: 6.47059
+    TOYOTA_AF_LEARN_LOW_PORT_B1: 2.94118
+    TOYOTA_AF_LEARN_MID1_PORT_B1: 7.2549
+    TOYOTA_AF_LEARN_MID2_PORT_B1: 13.13725
+  response: |-
+    70810086210A2908792
+    70821A1A10000000000
+- expected_values:
+    TOYOTA_AF_LEARN_HIGH_PORT_B1: 13.52941
+    TOYOTA_AF_LEARN_IDLE_PORT_B1: 6.47059
+    TOYOTA_AF_LEARN_LOW_PORT_B1: 2.94118
+    TOYOTA_AF_LEARN_MID1_PORT_B1: 7.2549
+    TOYOTA_AF_LEARN_MID2_PORT_B1: 13.13725
+  response: |-
+    70810086210A2908792
+    70821A1A20000000000
+- expected_values:
     TOYOTA_AF_LEARN_HIGH_PORT_B1: 13.52941
     TOYOTA_AF_LEARN_IDLE_PORT_B1: 6.47059
     TOYOTA_AF_LEARN_LOW_PORT_B1: 3.72549
