--- a/tests/test_cases/2025/commands/700.708.221019.yaml
+++ b/tests/test_cases/2025/commands/700.708.221019.yaml
@@ -2,7 +2,13 @@ command_id: 700.708.221019
 test_cases:
 - expected_values:
     TOYOTA_INJECTION: BOTH
-  response: 7080762101902F48000
+  response: '7080762101902078000'
+- expected_values:
+    TOYOTA_INJECTION: BOTH
+  response: 7080762101902348B15
+- expected_values:
+    TOYOTA_INJECTION: BOTH
+  response: 7080762101902858BB8
 - expected_values:
     TOYOTA_INJECTION: BOTH
   response: 7080762101902FA8000
