--- a/tests/test_cases/2025/commands/700.708.221041.yaml
+++ b/tests/test_cases/2025/commands/700.708.221041.yaml
@@ -2,8 +2,16 @@ command_id: 700.708.221041
 test_cases:
 - expected_values:
     TOYOTA_ECT_IGN: 6.875
+    TOYOTA_ECT_INIT: 6.875
+  response: 708056210414B4B
+- expected_values:
+    TOYOTA_ECT_IGN: 6.875
     TOYOTA_ECT_INIT: 40
   response: 708056210414B80
+- expected_values:
+    TOYOTA_ECT_IGN: 55.625
+    TOYOTA_ECT_INIT: 55.625
+  response: '708056210419999'
 - expected_values:
     TOYOTA_ECT_IGN: 55.625
     TOYOTA_ECT_INIT: 56.25
@@ -12,3 +20,15 @@ test_cases:
     TOYOTA_ECT_IGN: 55.625
     TOYOTA_ECT_INIT: 70.625
   response: 7080562104199B1
+- expected_values:
+    TOYOTA_ECT_IGN: 72.5
+    TOYOTA_ECT_INIT: 72.5
+  response: 70805621041B4B4
+- expected_values:
+    TOYOTA_ECT_IGN: 72.5
+    TOYOTA_ECT_INIT: 87.5
+  response: 70805621041B4CC
+- expected_values:
+    TOYOTA_ECT_IGN: 72.5
+    TOYOTA_ECT_INIT: 88.125
+  response: 70805621041B4CD
