--- a/tests/test_cases/2025/commands/700.708.221089.yaml
+++ b/tests/test_cases/2025/commands/700.708.221089.yaml
@@ -1,5 +1,14 @@
 command_id: 700.708.221089
 test_cases:
 - expected_values:
+    TOYOTA_EXHAUST_VVT_HOLD_LEARN_B1: 51.01341
+  response: 7080562108920A8
+- expected_values:
+    TOYOTA_EXHAUST_VVT_HOLD_LEARN_B1: 56.22459
+  response: 7080562108923FE
+- expected_values:
+    TOYOTA_EXHAUST_VVT_HOLD_LEARN_B1: 57.79893
+  response: '708056210892500'
+- expected_values:
     TOYOTA_EXHAUST_VVT_HOLD_LEARN_B1: 59.36716
   response: '708056210892601'
