--- a/tests/test_cases/2025/commands/700.708.2215E8.yaml
+++ b/tests/test_cases/2025/commands/700.708.2215E8.yaml
@@ -30,3 +30,23 @@ test_cases:
     70810146215E8000028
     708212C0000214A8181
     70822000A0000013290
+- expected_values:
+    TOYOTA_AUX_BAT_CAP_IGN_OFF: 1
+    TOYOTA_AUX_BAT_CAP_IGN_ON: 1
+    TOYOTA_AUX_BAT_CHG_I_INTEG: 1029.9
+    TOYOTA_AUX_BAT_DISCHG_I_INTEG: 852.3
+    TOYOTA_INTEGRATED_ENGINE_RUN_TIME: 10
+  response: |-
+    70810146215E8000028
+    708213B0000214B8181
+    70822000A00000133DA
+- expected_values:
+    TOYOTA_AUX_BAT_CAP_IGN_OFF: 1
+    TOYOTA_AUX_BAT_CAP_IGN_ON: 1
+    TOYOTA_AUX_BAT_CHG_I_INTEG: 1030.1
+    TOYOTA_AUX_BAT_DISCHG_I_INTEG: 852.3
+    TOYOTA_INTEGRATED_ENGINE_RUN_TIME: 10
+  response: |-
+    70810146215E8000028
+    708213D0000214B8181
+    70822000A00000133F8
