--- a/tests/test_cases/2025/commands/700.708.221F46.yaml
+++ b/tests/test_cases/2025/commands/700.708.221F46.yaml
@@ -1,8 +1,23 @@
 command_id: 700.708.221F46
 test_cases:
 - expected_values:
+    TOYOTA_AMBIENT_T: 5
+  response: 70804621F462D
+- expected_values:
+    TOYOTA_AMBIENT_T: 6
+  response: 70804621F462E
+- expected_values:
+    TOYOTA_AMBIENT_T: 7
+  response: 70804621F462F
+- expected_values:
     TOYOTA_AMBIENT_T: 8
   response: 70804621F4630
 - expected_values:
     TOYOTA_AMBIENT_T: 9
   response: 70804621F4631
+- expected_values:
+    TOYOTA_AMBIENT_T: 10
+  response: 70804621F4632
+- expected_values:
+    TOYOTA_AMBIENT_T: 11
+  response: 70804621F4633
