--- a/tests/test_cases/2025/commands/701.709.221620.yaml
+++ b/tests/test_cases/2025/commands/701.709.221620.yaml
@@ -3,3 +3,6 @@ test_cases:
 - expected_values:
     TOYOTA_LOCK_UP_STATE: 0
   response: '7090462162000'
+- expected_values:
+    TOYOTA_LOCK_UP_STATE: 1
+  response: '7090462162001'
