--- a/tests/test_cases/2019/commands/7B0.7B8.2146.yaml
+++ b/tests/test_cases/2019/commands/7B0.7B8.2146.yaml
@@ -8,9 +8,30 @@ test_cases:
     7B8100961460002807F
     7B821F1271F00000000
 - expected_values:
+    TOYOTA_ZP_DEC: -25.11
+    TOYOTA_ZP_DEC2: -24.71769
+    TOYOTA_ZP_YAW: 0
+  response: |-
+    7B8100961460002807F
+    7B821F1280000000000
+- expected_values:
+    TOYOTA_ZP_DEC: -24.91384
+    TOYOTA_ZP_DEC2: -24.71769
+    TOYOTA_ZP_YAW: 0
+  response: |-
+    7B8100961460102807F
+    7B821F1270000000000
+- expected_values:
     TOYOTA_ZP_DEC: -24.91384
     TOYOTA_ZP_DEC2: -24.71769
     TOYOTA_ZP_YAW: 0
   response: |-
     7B8100961460102807F
     7B821F1271F00000000
+- expected_values:
+    TOYOTA_ZP_DEC: -24.91384
+    TOYOTA_ZP_DEC2: -24.71769
+    TOYOTA_ZP_YAW: 0
+  response: |-
+    7B8100961460102807F
+    7B821F1280000000000
