--- a/tests/test_cases/2019/commands/7B0.7B8.215A.yaml
+++ b/tests/test_cases/2019/commands/7B0.7B8.215A.yaml
@@ -18,3 +18,12 @@ test_cases:
     TOYOTA_TRC_TRAC__CTRL_STATUS: 0
     TOYOTA_TRC_TRAC__ENGINE_CTRL_STATUS: 0
   response: 7B804615A0800
+- expected_values:
+    TOYOTA_FL_WHEEL_VSC_CTRL_STATUS: 0
+    TOYOTA_FR_WHEEL_VSC_CTRL_STATUS: 0
+    TOYOTA_RL_WHEEL_VSC_CTRL_STATUS: 0
+    TOYOTA_RR_WHEEL_VSC_CTRL_STATUS: 0
+    TOYOTA_TRC_TRAC__BRAKE_CTRL_STATUS: 1
+    TOYOTA_TRC_TRAC__CTRL_STATUS: 1
+    TOYOTA_TRC_TRAC__ENGINE_CTRL_STATUS: 1
+  response: 7B804615AE008
