--- a/tests/test_cases/2023/commands/700.708.22102A.yaml
+++ b/tests/test_cases/2023/commands/700.708.22102A.yaml
@@ -37,6 +37,15 @@ test_cases:
     708100862102A8D8284
     70821858B0000000000
 - expected_values:
+    TOYOTA_A_F_RATIO_LEARNED_HIGH_BANK_1: 2.15686
+    TOYOTA_A_F_RATIO_LEARNED_IDLE_BANK_1: 5.68627
+    TOYOTA_A_F_RATIO_LEARNED_LOW_BANK_1: 0.58824
+    TOYOTA_A_F_RATIO_LEARNED_MID_1_BANK_1: 2.94118
+    TOYOTA_A_F_RATIO_LEARNED_MID_2_BANK_1: 2.54902
+  response: |-
+    708100862102A8E8187
+    7082186850000000000
+- expected_values:
     TOYOTA_A_F_RATIO_LEARNED_HIGH_BANK_1: 3.72549
     TOYOTA_A_F_RATIO_LEARNED_IDLE_BANK_1: 7.64706
     TOYOTA_A_F_RATIO_LEARNED_LOW_BANK_1: 0.98039
