--- a/tests/test_cases/2023/commands/700.708.22105C.yaml
+++ b/tests/test_cases/2023/commands/700.708.22105C.yaml
@@ -1,6 +1,10 @@
 command_id: 700.708.22105C
 test_cases:
 - expected_values:
+    TOYOTA_KNOCK_CORRECT_LEARNED_VALUE: 19.71875
+    TOYOTA_KNOCK_FEEDBACK_VALUE: -3
+  response: 7080762105C82777FA0
+- expected_values:
     TOYOTA_KNOCK_CORRECT_LEARNED_VALUE: 21.09375
     TOYOTA_KNOCK_FEEDBACK_VALUE: -3.6875
   response: 7080762105C82A37F8A
