--- a/tests/test_cases/2025/commands/700.708.2215E8.yaml
+++ b/tests/test_cases/2025/commands/700.708.2215E8.yaml
@@ -60,3 +60,13 @@ test_cases:
     70810146215E8000028
     7082154000021528181
     70822000A00000136AA
+- expected_values:
+    TOYOTA_AUX_BAT_CAP_IGN_OFF: 1
+    TOYOTA_AUX_BAT_CAP_IGN_ON: 1
+    TOYOTA_AUX_BAT_CHG_I_INTEG: 1035.9
+    TOYOTA_AUX_BAT_DISCHG_I_INTEG: 855.5
+    TOYOTA_INTEGRATED_ENGINE_RUN_TIME: 11
+  response: |-
+    70810146215E8000028
+    70821770000216B8181
+    70822000B0000013C86
