--- a/tests/test_cases/2025/commands/700.708.2215E8.yaml
+++ b/tests/test_cases/2025/commands/700.708.2215E8.yaml
@@ -70,3 +70,13 @@ test_cases:
     70810146215E8000028
     70821770000216B8181
     70822000B0000013C86
+- expected_values:
+    TOYOTA_AUX_BAT_CAP_IGN_OFF: 1
+    TOYOTA_AUX_BAT_CAP_IGN_ON: 1
+    TOYOTA_AUX_BAT_CHG_I_INTEG: 2268
+    TOYOTA_AUX_BAT_DISCHG_I_INTEG: 1552.3
+    TOYOTA_INTEGRATED_ENGINE_RUN_TIME: 93
+  response: |-
+    70810146215E8000058
+    708219800003CA38181
+    70822005D0000089DDC
