--- a/tests/test_cases/2025/commands/700.708.22102A.yaml
+++ b/tests/test_cases/2025/commands/700.708.22102A.yaml
@@ -46,6 +46,15 @@ test_cases:
     708100862102A8B8B85
     708218F900000000000
 - expected_values:
+    TOYOTA_A_F_RATIO_LEARNED_HIGH_BANK_1: 2.94118
+    TOYOTA_A_F_RATIO_LEARNED_IDLE_BANK_1: 5.29412
+    TOYOTA_A_F_RATIO_LEARNED_LOW_BANK_1: -0.98039
+    TOYOTA_A_F_RATIO_LEARNED_MID_1_BANK_1: 1.37255
+    TOYOTA_A_F_RATIO_LEARNED_MID_2_BANK_1: 0.19608
+  response: |-
+    708100862102A8D7D83
+    7082180870000000000
+- expected_values:
     TOYOTA_A_F_RATIO_LEARNED_HIGH_BANK_1: 5.29412
     TOYOTA_A_F_RATIO_LEARNED_IDLE_BANK_1: 6.86275
     TOYOTA_A_F_RATIO_LEARNED_LOW_BANK_1: 6.47059
