--- a/tests/test_cases/2025/commands/700.708.22108F.yaml
+++ b/tests/test_cases/2025/commands/700.708.22108F.yaml
@@ -1,6 +1,9 @@
 command_id: 700.708.22108F
 test_cases:
 - expected_values:
+    TOYOTA_EXHAUST_VVT_OVER_ADV_LEARN_B1: 118.28121
+  response: 7080562108F2F50
+- expected_values:
     TOYOTA_EXHAUST_VVT_OVER_ADV_LEARN_B1: 120.79097
   response: 7080562108F3051
 - expected_values:
