Update command data for Toyota/Tundra

--- a/tests/test_cases/2025/commands/700.708.2210A2.yaml
+++ b/tests/test_cases/2025/commands/700.708.2210A2.yaml
@@ -10,13 +10,22 @@ test_cases:
     70810086210A2878789
     70821A2A10000000000
 - expected_values:
-    TOYOTA_AF_LEARN_HIGH_PORT_B1: 12.7451
-    TOYOTA_AF_LEARN_IDLE_PORT_B1: 4.11765
-    TOYOTA_AF_LEARN_LOW_PORT_B1: 2.94118
+    TOYOTA_AF_LEARN_HIGH_PORT_B1: 11.96078
+    TOYOTA_AF_LEARN_IDLE_PORT_B1: 3.72549
+    TOYOTA_AF_LEARN_LOW_PORT_B1: 2.15686
     TOYOTA_AF_LEARN_MID1_PORT_B1: 4.90196
     TOYOTA_AF_LEARN_MID2_PORT_B1: 13.52941
   response: |-
-    70810086210A28A878C
+    70810086210A289858C
+    70821A29E0000000000
+- expected_values:
+    TOYOTA_AF_LEARN_HIGH_PORT_B1: 12.7451
+    TOYOTA_AF_LEARN_IDLE_PORT_B1: 3.72549
+    TOYOTA_AF_LEARN_LOW_PORT_B1: 2.15686
+    TOYOTA_AF_LEARN_MID1_PORT_B1: 4.90196
+    TOYOTA_AF_LEARN_MID2_PORT_B1: 13.52941
+  response: |-
+    70810086210A289858C
     70821A2A00000000000
 - expected_values:
     TOYOTA_AF_LEARN_HIGH_PORT_B1: 13.13725
