--- a/tests/test_cases/2025/commands/700.708.221019.yaml
+++ b/tests/test_cases/2025/commands/700.708.221019.yaml
@@ -2,6 +2,9 @@ command_id: 700.708.221019
 test_cases:
 - expected_values:
     TOYOTA_INJECTION: DIRECT
+  response: 7080762101901568AF0
+- expected_values:
+    TOYOTA_INJECTION: DIRECT
   response: 70807621019015B8000
 - expected_values:
     TOYOTA_INJECTION: DIRECT
@@ -9,9 +12,6 @@ test_cases:
 - expected_values:
     TOYOTA_INJECTION: BOTH
   response: '7080762101902078000'
-- expected_values:
-    TOYOTA_INJECTION: BOTH
-  response: 7080762101902858BB8
 - expected_values:
     TOYOTA_INJECTION: BOTH
   response: 7080762101902FA8000
