--- a/tests/test_cases/2025/commands/700.708.2215F6.yaml
+++ b/tests/test_cases/2025/commands/700.708.2215F6.yaml
@@ -29,6 +29,11 @@ test_cases:
     TOYOTA_BAT_V_INIT_LOW_V: 8.8
   response: |-
     70810096215F6000058
+    7082100002D00000000
+- expected_values:
+    TOYOTA_BAT_V_INIT_LOW_V: 8.8
+  response: |-
+    70810096215F6000058
     7082100003100000000
 - expected_values:
     TOYOTA_BAT_V_INIT_LOW_V: 8.9
