Update command data for Toyota/Tundra

--- a/tests/test_cases/2019/commands/7C0.7C8.2112.yaml
+++ b/tests/test_cases/2019/commands/7C0.7C8.2112.yaml
@@ -12,5 +12,12 @@ test_cases:
     TOYOTA_P_SEATBELT_BUCKLE: 0
     TOYOTA_TAIL_CANCEL: 0
   response: |-
+    7C81009611200000001
+    7C82100020000000000
+- expected_values:
+    TOYOTA_CHECK_ENGINE: 0
+    TOYOTA_P_SEATBELT_BUCKLE: 0
+    TOYOTA_TAIL_CANCEL: 0
+  response: |-
     7C81009611200000002
     7C82100020000000000
