--- a/tests/test_cases/2019/commands/7E0.7E8.2101.yaml
+++ b/tests/test_cases/2019/commands/7E0.7E8.2101.yaml
@@ -4,6 +4,32 @@ test_cases:
     TOYOTA_ACCEL_SENS__NO_1_VOLT: 31.76471
     TOYOTA_ACCEL_SENS__NO_2_VOLT: 18.82353
     TOYOTA_AMBIENT_T_V2: 60
+    TOYOTA_ATMOSPHERE_PRESSURE: 126
+    TOYOTA_CALCULATED_LOAD_7E0: 0
+    TOYOTA_COOLANT_TEMP: 0
+    TOYOTA_ENGINE_RUN_TIME: 0
+    TOYOTA_ENGINE_SPEED: 0
+    TOYOTA_INTAKE_AIR: 21
+    TOYOTA_MAF: 181
+    TOYOTA_MAP: 100
+    TOYOTA_THROTTLE_MOTOR_DUTY: 0.78431
+    TOYOTA_THROTTLE_SENSOR_POSITION: 18.43137
+    TOYOTA_THROTTLE_SENSOR_VOLT: 51.37255
+    TOYOTA_THROTTL_SENSOR__2_VOLT: 16.07843
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 6191
+    TOYOTA_VEHICLE_LOAD: 0
+    TOYOTA_VEHICLE_SPEED: 0
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 6
+  response: |-
+    7E8101D610100000000
+    7E821B5643D647E0000
+    7E822000000002F8329
+    7E82351300200060018
+    7E8242FC20000000000
+- expected_values:
+    TOYOTA_ACCEL_SENS__NO_1_VOLT: 31.76471
+    TOYOTA_ACCEL_SENS__NO_2_VOLT: 18.82353
+    TOYOTA_AMBIENT_T_V2: 60
     TOYOTA_ATMOSPHERE_PRESSURE: 82
     TOYOTA_CALCULATED_LOAD_7E0: 0
     TOYOTA_COOLANT_TEMP: 0
@@ -26,6 +52,58 @@ test_cases:
     7E82200000000308329
     7E8235130010002000E
     7E8242FC20000000000
+- expected_values:
+    TOYOTA_ACCEL_SENS__NO_1_VOLT: 31.76471
+    TOYOTA_ACCEL_SENS__NO_2_VOLT: 17.2549
+    TOYOTA_AMBIENT_T_V2: 60
+    TOYOTA_ATMOSPHERE_PRESSURE: 127
+    TOYOTA_CALCULATED_LOAD_7E0: 21.96078
+    TOYOTA_COOLANT_TEMP: 16
+    TOYOTA_ENGINE_RUN_TIME: 34560
+    TOYOTA_ENGINE_SPEED: 16383
+    TOYOTA_INTAKE_AIR: 23
+    TOYOTA_MAF: 648
+    TOYOTA_MAP: 24
+    TOYOTA_THROTTLE_MOTOR_DUTY: 0.78431
+    TOYOTA_THROTTLE_SENSOR_POSITION: 17.2549
+    TOYOTA_THROTTLE_SENSOR_VOLT: 49.80392
+    TOYOTA_THROTTL_SENSOR__2_VOLT: 16.07843
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 6709
+    TOYOTA_VEHICLE_LOAD: 0.05035
+    TOYOTA_VEHICLE_SPEED: 0
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 7
+  response: |-
+    7E8101D610138002102
+    7E82188183F647F10F1
+    7E8222D0087002C7F29
+    7E823512C020007001A
+    7E82435190000000000
+- expected_values:
+    TOYOTA_ACCEL_SENS__NO_1_VOLT: 31.76471
+    TOYOTA_ACCEL_SENS__NO_2_VOLT: 16.86275
+    TOYOTA_AMBIENT_T_V2: 60
+    TOYOTA_ATMOSPHERE_PRESSURE: 133
+    TOYOTA_CALCULATED_LOAD_7E0: 22.35294
+    TOYOTA_COOLANT_TEMP: 12
+    TOYOTA_ENGINE_RUN_TIME: 40448
+    TOYOTA_ENGINE_SPEED: 16383
+    TOYOTA_INTAKE_AIR: 20
+    TOYOTA_MAF: 495
+    TOYOTA_MAP: 25
+    TOYOTA_THROTTLE_MOTOR_DUTY: 0.78431
+    TOYOTA_THROTTLE_SENSOR_POSITION: 16.86275
+    TOYOTA_THROTTLE_SENSOR_VOLT: 49.01961
+    TOYOTA_THROTTL_SENSOR__2_VOLT: 16.07843
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 10036
+    TOYOTA_VEHICLE_LOAD: 0.05341
+    TOYOTA_VEHICLE_SPEED: 3
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 10
+  response: |-
+    7E8101D610139002301
+    7E821EF193C64850C4E
+    7E8222E039E002B7D29
+    7E823512B02000A0027
+    7E82434560000000000
 - expected_values:
     TOYOTA_ACCEL_SENS__NO_1_VOLT: 37.2549
     TOYOTA_ACCEL_SENS__NO_2_VOLT: 18.03922
@@ -54,30 +132,30 @@ test_cases:
     7E824358E0000000000
 - expected_values:
     TOYOTA_ACCEL_SENS__NO_1_VOLT: 31.76471
-    TOYOTA_ACCEL_SENS__NO_2_VOLT: 17.2549
-    TOYOTA_AMBIENT_T_V2: 60
-    TOYOTA_ATMOSPHERE_PRESSURE: 117
-    TOYOTA_CALCULATED_LOAD_7E0: 23.13725
-    TOYOTA_COOLANT_TEMP: 12
-    TOYOTA_ENGINE_RUN_TIME: 53504
+    TOYOTA_ACCEL_SENS__NO_2_VOLT: 16.47059
+    TOYOTA_AMBIENT_T_V2: 59
+    TOYOTA_ATMOSPHERE_PRESSURE: 133
+    TOYOTA_CALCULATED_LOAD_7E0: 23.92157
+    TOYOTA_COOLANT_TEMP: 10
+    TOYOTA_ENGINE_RUN_TIME: 20992
     TOYOTA_ENGINE_SPEED: 16383
-    TOYOTA_INTAKE_AIR: 15
-    TOYOTA_MAF: 593
-    TOYOTA_MAP: 25
-    TOYOTA_THROTTLE_MOTOR_DUTY: 16.47059
-    TOYOTA_THROTTLE_SENSOR_POSITION: 17.2549
-    TOYOTA_THROTTLE_SENSOR_VOLT: 49.80392
+    TOYOTA_INTAKE_AIR: 20
+    TOYOTA_MAF: 439
+    TOYOTA_MAP: 28
+    TOYOTA_THROTTLE_MOTOR_DUTY: 0.78431
+    TOYOTA_THROTTLE_SENSOR_POSITION: 16.47059
+    TOYOTA_THROTTLE_SENSOR_VOLT: 48.62745
     TOYOTA_THROTTL_SENSOR__2_VOLT: 16.07843
-    TOYOTA_TIME_AFTER_DTC_CLEARED: 3637
-    TOYOTA_VEHICLE_LOAD: 0.06256
-    TOYOTA_VEHICLE_SPEED: 2
-    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 123
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 10803
+    TOYOTA_VEHICLE_LOAD: 0.05341
+    TOYOTA_VEHICLE_SPEED: 4
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 11
   response: |-
-    7E8101D61013B002902
-    7E82151193764750C86
-    7E8222F02D1002C7F29
-    7E823512C2A027B040E
-    7E82435540000000000
+    7E8101D61013D002301
+    7E821B71C3C63850AE3
+    7E822000452002A7C29
+    7E823512A02000B002A
+    7E82433A60000000000
 - expected_values:
     TOYOTA_ACCEL_SENS__NO_1_VOLT: 31.76471
     TOYOTA_ACCEL_SENS__NO_2_VOLT: 17.64706
@@ -104,6 +182,58 @@ test_cases:
     7E8224B00A8002D8029
     7E823512D2902790404
     7E82436170000000000
+- expected_values:
+    TOYOTA_ACCEL_SENS__NO_1_VOLT: 31.76471
+    TOYOTA_ACCEL_SENS__NO_2_VOLT: 16.86275
+    TOYOTA_AMBIENT_T_V2: 59
+    TOYOTA_ATMOSPHERE_PRESSURE: 131
+    TOYOTA_CALCULATED_LOAD_7E0: 24.70588
+    TOYOTA_COOLANT_TEMP: 10
+    TOYOTA_ENGINE_RUN_TIME: 24576
+    TOYOTA_ENGINE_SPEED: 16383
+    TOYOTA_INTAKE_AIR: 29
+    TOYOTA_MAF: 439
+    TOYOTA_MAP: 28
+    TOYOTA_THROTTLE_MOTOR_DUTY: 0.78431
+    TOYOTA_THROTTLE_SENSOR_POSITION: 16.47059
+    TOYOTA_THROTTLE_SENSOR_VOLT: 49.01961
+    TOYOTA_THROTTL_SENSOR__2_VOLT: 16.07843
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 12083
+    TOYOTA_VEHICLE_LOAD: 0.05341
+    TOYOTA_VEHICLE_SPEED: 5
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 11
+  response: |-
+    7E8101D61013F002301
+    7E821B71C4563830AC7
+    7E822000560002A7D29
+    7E823512B02000B002F
+    7E824336C0000000000
+- expected_values:
+    TOYOTA_ACCEL_SENS__NO_1_VOLT: 31.76471
+    TOYOTA_ACCEL_SENS__NO_2_VOLT: 16.86275
+    TOYOTA_AMBIENT_T_V2: 60
+    TOYOTA_ATMOSPHERE_PRESSURE: 131
+    TOYOTA_CALCULATED_LOAD_7E0: 24.70588
+    TOYOTA_COOLANT_TEMP: 10
+    TOYOTA_ENGINE_RUN_TIME: 39936
+    TOYOTA_ENGINE_SPEED: 16383
+    TOYOTA_INTAKE_AIR: 30
+    TOYOTA_MAF: 439
+    TOYOTA_MAP: 28
+    TOYOTA_THROTTLE_MOTOR_DUTY: 0.78431
+    TOYOTA_THROTTLE_SENSOR_POSITION: 16.47059
+    TOYOTA_THROTTLE_SENSOR_VOLT: 49.01961
+    TOYOTA_THROTTL_SENSOR__2_VOLT: 16.07843
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 12339
+    TOYOTA_VEHICLE_LOAD: 0.05341
+    TOYOTA_VEHICLE_SPEED: 5
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 11
+  response: |-
+    7E8101D61013F002301
+    7E821B71C4664830AC4
+    7E82200059C002A7D29
+    7E823512B02000B0030
+    7E82433580000000000
 - expected_values:
     TOYOTA_ACCEL_SENS__NO_1_VOLT: 31.76471
     TOYOTA_ACCEL_SENS__NO_2_VOLT: 16.47059
@@ -158,6 +288,32 @@ test_cases:
     7E82436040000000000
 - expected_values:
     TOYOTA_ACCEL_SENS__NO_1_VOLT: 31.76471
+    TOYOTA_ACCEL_SENS__NO_2_VOLT: 16.86275
+    TOYOTA_AMBIENT_T_V2: 60
+    TOYOTA_ATMOSPHERE_PRESSURE: 130
+    TOYOTA_CALCULATED_LOAD_7E0: 25.4902
+    TOYOTA_COOLANT_TEMP: 10
+    TOYOTA_ENGINE_RUN_TIME: 52480
+    TOYOTA_ENGINE_SPEED: 16383
+    TOYOTA_INTAKE_AIR: 30
+    TOYOTA_MAF: 464
+    TOYOTA_MAP: 28
+    TOYOTA_THROTTLE_MOTOR_DUTY: 0.78431
+    TOYOTA_THROTTLE_SENSOR_POSITION: 16.86275
+    TOYOTA_THROTTLE_SENSOR_VOLT: 49.01961
+    TOYOTA_THROTTL_SENSOR__2_VOLT: 16.07843
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 9267
+    TOYOTA_VEHICLE_LOAD: 0.05646
+    TOYOTA_VEHICLE_SPEED: 2
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 9
+  response: |-
+    7E8101D610141002501
+    7E821D01C4664820AE6
+    7E8220002CD002B7D29
+    7E823512B0200090024
+    7E824337F0000000000
+- expected_values:
+    TOYOTA_ACCEL_SENS__NO_1_VOLT: 31.76471
     TOYOTA_ACCEL_SENS__NO_2_VOLT: 17.64706
     TOYOTA_AMBIENT_T_V2: 60
     TOYOTA_ATMOSPHERE_PRESSURE: 127
@@ -184,108 +340,134 @@ test_cases:
     7E82435190000000000
 - expected_values:
     TOYOTA_ACCEL_SENS__NO_1_VOLT: 31.76471
-    TOYOTA_ACCEL_SENS__NO_2_VOLT: 17.2549
+    TOYOTA_ACCEL_SENS__NO_2_VOLT: 17.64706
     TOYOTA_AMBIENT_T_V2: 60
     TOYOTA_ATMOSPHERE_PRESSURE: 128
-    TOYOTA_CALCULATED_LOAD_7E0: 28.23529
-    TOYOTA_COOLANT_TEMP: 9
-    TOYOTA_ENGINE_RUN_TIME: 27648
-    TOYOTA_ENGINE_SPEED: 16383
-    TOYOTA_INTAKE_AIR: 23
-    TOYOTA_MAF: 545
+    TOYOTA_CALCULATED_LOAD_7E0: 27.84314
+    TOYOTA_COOLANT_TEMP: 14
+    TOYOTA_ENGINE_RUN_TIME: 1280
+    TOYOTA_ENGINE_SPEED: 12812
+    TOYOTA_INTAKE_AIR: 25
+    TOYOTA_MAF: 642
     TOYOTA_MAP: 31
-    TOYOTA_THROTTLE_MOTOR_DUTY: 0.39216
+    TOYOTA_THROTTLE_MOTOR_DUTY: 0.78431
     TOYOTA_THROTTLE_SENSOR_POSITION: 17.2549
+    TOYOTA_THROTTLE_SENSOR_VOLT: 49.80392
+    TOYOTA_THROTTL_SENSOR__2_VOLT: 16.07843
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 7220
+    TOYOTA_VEHICLE_LOAD: 0.05951
+    TOYOTA_VEHICLE_SPEED: 1
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 7
+  response: |-
+    7E8101D610147002702
+    7E821821F4164800E32
+    7E8220C0105002C7F29
+    7E823512D020007001C
+    7E82434080000000000
+- expected_values:
+    TOYOTA_ACCEL_SENS__NO_1_VOLT: 31.76471
+    TOYOTA_ACCEL_SENS__NO_2_VOLT: 16.86275
+    TOYOTA_AMBIENT_T_V2: 59
+    TOYOTA_ATMOSPHERE_PRESSURE: 131
+    TOYOTA_CALCULATED_LOAD_7E0: 27.84314
+    TOYOTA_COOLANT_TEMP: 11
+    TOYOTA_ENGINE_RUN_TIME: 36352
+    TOYOTA_ENGINE_SPEED: 6144
+    TOYOTA_INTAKE_AIR: 23
+    TOYOTA_MAF: 532
+    TOYOTA_MAP: 32
+    TOYOTA_THROTTLE_MOTOR_DUTY: 0.78431
+    TOYOTA_THROTTLE_SENSOR_POSITION: 16.86275
     TOYOTA_THROTTLE_SENSOR_VOLT: 49.41176
     TOYOTA_THROTTL_SENSOR__2_VOLT: 16.07843
-    TOYOTA_TIME_AFTER_DTC_CLEARED: 3124
-    TOYOTA_VEHICLE_LOAD: 0.07324
-    TOYOTA_VEHICLE_SPEED: 0
-    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 1
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 11059
+    TOYOTA_VEHICLE_LOAD: 0.06409
+    TOYOTA_VEHICLE_SPEED: 4
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 11
   response: |-
-    7E8101D610148003002
-    7E821211F3F648009EC
-    7E82215006C002C7E29
-    7E823512C010001000C
-    7E824347D0000000000
+    7E8101D610147002A02
+    7E82114203F63830B18
+    7E82200048E002B7E29
+    7E823512B02000B002B
+    7E824337F0000000000
 - expected_values:
     TOYOTA_ACCEL_SENS__NO_1_VOLT: 31.76471
     TOYOTA_ACCEL_SENS__NO_2_VOLT: 17.2549
     TOYOTA_AMBIENT_T_V2: 60
-    TOYOTA_ATMOSPHERE_PRESSURE: 106
-    TOYOTA_CALCULATED_LOAD_7E0: 28.62745
-    TOYOTA_COOLANT_TEMP: 11
-    TOYOTA_ENGINE_RUN_TIME: 1792
-    TOYOTA_ENGINE_SPEED: 16383
+    TOYOTA_ATMOSPHERE_PRESSURE: 125
+    TOYOTA_CALCULATED_LOAD_7E0: 29.01961
+    TOYOTA_COOLANT_TEMP: 12
+    TOYOTA_ENGINE_RUN_TIME: 62976
+    TOYOTA_ENGINE_SPEED: 7965
     TOYOTA_INTAKE_AIR: 16
-    TOYOTA_MAF: 575
-    TOYOTA_MAP: 29
-    TOYOTA_THROTTLE_MOTOR_DUTY: 16.07843
+    TOYOTA_MAF: 637
+    TOYOTA_MAP: 31
+    TOYOTA_THROTTLE_MOTOR_DUTY: 0.78431
     TOYOTA_THROTTLE_SENSOR_POSITION: 17.2549
-    TOYOTA_THROTTLE_SENSOR_VOLT: 49.41176
+    TOYOTA_THROTTLE_SENSOR_VOLT: 49.80392
     TOYOTA_THROTTL_SENSOR__2_VOLT: 16.07843
-    TOYOTA_TIME_AFTER_DTC_CLEARED: 2612
-    TOYOTA_VEHICLE_LOAD: 0.06714
-    TOYOTA_VEHICLE_SPEED: 2
-    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 122
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 5685
+    TOYOTA_VEHICLE_LOAD: 0.07019
+    TOYOTA_VEHICLE_SPEED: 1
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 6
   response: |-
-    7E8101D610149002C02
-    7E8213F1D38646A0B70
-    7E822000207002C7E29
-    7E823512C29027A040A
-    7E82434A40000000000
+    7E8101D61014A002E02
+    7E8217D1F38647D0C1F
+    7E8221D01F6002C7F29
+    7E823512C0200060016
+    7E82435670000000000
 - expected_values:
-    TOYOTA_ACCEL_SENS__NO_1_VOLT: 31.76471
+    TOYOTA_ACCEL_SENS__NO_1_VOLT: 35.29412
     TOYOTA_ACCEL_SENS__NO_2_VOLT: 17.64706
     TOYOTA_AMBIENT_T_V2: 60
-    TOYOTA_ATMOSPHERE_PRESSURE: 108
-    TOYOTA_CALCULATED_LOAD_7E0: 32.94118
-    TOYOTA_COOLANT_TEMP: 11
-    TOYOTA_ENGINE_RUN_TIME: 20992
+    TOYOTA_ATMOSPHERE_PRESSURE: 131
+    TOYOTA_CALCULATED_LOAD_7E0: 30.98039
+    TOYOTA_COOLANT_TEMP: 14
+    TOYOTA_ENGINE_RUN_TIME: 61696
     TOYOTA_ENGINE_SPEED: 16383
-    TOYOTA_INTAKE_AIR: 17
+    TOYOTA_INTAKE_AIR: 23
     TOYOTA_MAF: 655.35
-    TOYOTA_MAP: 34
-    TOYOTA_THROTTLE_MOTOR_DUTY: 16.07843
+    TOYOTA_MAP: 35
+    TOYOTA_THROTTLE_MOTOR_DUTY: 0.78431
     TOYOTA_THROTTLE_SENSOR_POSITION: 17.64706
-    TOYOTA_THROTTLE_SENSOR_VOLT: 50.19608
-    TOYOTA_THROTTL_SENSOR__2_VOLT: 16.07843
-    TOYOTA_TIME_AFTER_DTC_CLEARED: 2868
-    TOYOTA_VEHICLE_LOAD: 0.07782
-    TOYOTA_VEHICLE_SPEED: 2
-    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 122
+    TOYOTA_THROTTLE_SENSOR_VOLT: 49.80392
+    TOYOTA_THROTTL_SENSOR__2_VOLT: 19.60784
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 8243
+    TOYOTA_VEHICLE_LOAD: 0.06256
+    TOYOTA_VEHICLE_SPEED: 1
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 9
   response: |-
-    7E8101D610154003302
-    7E821A72239646C0B8F
-    7E822000252002D8029
-    7E823512D29027A040B
-    7E824347D0000000000
+    7E8101D61014F002902
+    7E821BC233F64830EA6
+    7E8221001F1002D7F32
+    7E8235A2D0200090020
+    7E82433F40000000000
 - expected_values:
     TOYOTA_ACCEL_SENS__NO_1_VOLT: 31.76471
-    TOYOTA_ACCEL_SENS__NO_2_VOLT: 17.64706
+    TOYOTA_ACCEL_SENS__NO_2_VOLT: 17.2549
     TOYOTA_AMBIENT_T_V2: 60
-    TOYOTA_ATMOSPHERE_PRESSURE: 107
+    TOYOTA_ATMOSPHERE_PRESSURE: 130
     TOYOTA_CALCULATED_LOAD_7E0: 32.94118
-    TOYOTA_COOLANT_TEMP: 11
-    TOYOTA_ENGINE_RUN_TIME: 12032
-    TOYOTA_ENGINE_SPEED: 16383
-    TOYOTA_INTAKE_AIR: 16
-    TOYOTA_MAF: 655.35
-    TOYOTA_MAP: 33
-    TOYOTA_THROTTLE_MOTOR_DUTY: 16.07843
-    TOYOTA_THROTTLE_SENSOR_POSITION: 17.64706
-    TOYOTA_THROTTLE_SENSOR_VOLT: 50.19608
+    TOYOTA_COOLANT_TEMP: 10
+    TOYOTA_ENGINE_RUN_TIME: 26624
+    TOYOTA_ENGINE_SPEED: 12544
+    TOYOTA_INTAKE_AIR: 24
+    TOYOTA_MAF: 585
+    TOYOTA_MAP: 35
+    TOYOTA_THROTTLE_MOTOR_DUTY: 0.78431
+    TOYOTA_THROTTLE_SENSOR_POSITION: 17.2549
+    TOYOTA_THROTTLE_SENSOR_VOLT: 49.80392
     TOYOTA_THROTTL_SENSOR__2_VOLT: 16.07843
-    TOYOTA_TIME_AFTER_DTC_CLEARED: 2868
-    TOYOTA_VEHICLE_LOAD: 0.07935
-    TOYOTA_VEHICLE_SPEED: 2
-    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 122
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 7731
+    TOYOTA_VEHICLE_LOAD: 0.0763
+    TOYOTA_VEHICLE_SPEED: 1
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 8
   response: |-
-    7E8101D610154003402
-    7E821AD2138646B0B92
-    7E82200022F002D8029
-    7E823512D29027A040B
-    7E824347D0000000000
+    7E8101D610154003202
+    7E82149234064820A31
+    7E822000168002C7F29
+    7E823512C020008001E
+    7E82433CD0000000000
 - expected_values:
     TOYOTA_ACCEL_SENS__NO_1_VOLT: 35.68627
     TOYOTA_ACCEL_SENS__NO_2_VOLT: 18.82353
@@ -313,31 +495,31 @@ test_cases:
     7E8235B3029027A0405
     7E82435B60000000000
 - expected_values:
-    TOYOTA_ACCEL_SENS__NO_1_VOLT: 36.47059
-    TOYOTA_ACCEL_SENS__NO_2_VOLT: 18.82353
+    TOYOTA_ACCEL_SENS__NO_1_VOLT: 31.76471
+    TOYOTA_ACCEL_SENS__NO_2_VOLT: 17.64706
     TOYOTA_AMBIENT_T_V2: 60
-    TOYOTA_ATMOSPHERE_PRESSURE: 101
-    TOYOTA_CALCULATED_LOAD_7E0: 41.17647
-    TOYOTA_COOLANT_TEMP: 11
-    TOYOTA_ENGINE_RUN_TIME: 23553
+    TOYOTA_ATMOSPHERE_PRESSURE: 111
+    TOYOTA_CALCULATED_LOAD_7E0: 35.29412
+    TOYOTA_COOLANT_TEMP: 10
+    TOYOTA_ENGINE_RUN_TIME: 65280
     TOYOTA_ENGINE_SPEED: 16383
-    TOYOTA_INTAKE_AIR: 15
-    TOYOTA_MAF: 655.35
-    TOYOTA_MAP: 43
-    TOYOTA_THROTTLE_MOTOR_DUTY: 16.07843
-    TOYOTA_THROTTLE_SENSOR_POSITION: 18.43137
-    TOYOTA_THROTTLE_SENSOR_VOLT: 51.37255
-    TOYOTA_THROTTL_SENSOR__2_VOLT: 20.78431
-    TOYOTA_TIME_AFTER_DTC_CLEARED: 1844
-    TOYOTA_VEHICLE_LOAD: 0.11444
-    TOYOTA_VEHICLE_SPEED: 1
-    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 122
+    TOYOTA_INTAKE_AIR: 17
+    TOYOTA_MAF: 648
+    TOYOTA_MAP: 37
+    TOYOTA_THROTTLE_MOTOR_DUTY: 0.78431
+    TOYOTA_THROTTLE_SENSOR_POSITION: 17.64706
+    TOYOTA_THROTTLE_SENSOR_VOLT: 50.19608
+    TOYOTA_THROTTL_SENSOR__2_VOLT: 16.07843
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 4661
+    TOYOTA_VEHICLE_LOAD: 0.08392
+    TOYOTA_VEHICLE_SPEED: 0
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 3
   response: |-
-    7E8101D610169004B03
-    7E821CD2B3764650B44
-    7E82200015C012F8335
-    7E8235D3029027A0407
-    7E82434DF0000000000
+    7E8101D61015A003702
+    7E821882539646F0A41
+    7E8220000FF002D8029
+    7E823512D0200030012
+    7E824352D0000000000
 - expected_values:
     TOYOTA_ACCEL_SENS__NO_1_VOLT: 42.7451
     TOYOTA_ACCEL_SENS__NO_2_VOLT: 24.70588
@@ -364,6 +546,84 @@ test_cases:
     7E8223A02EF113F9644
     7E8236D3F2A027B040E
     7E82435A20000000000
+- expected_values:
+    TOYOTA_ACCEL_SENS__NO_1_VOLT: 44.31373
+    TOYOTA_ACCEL_SENS__NO_2_VOLT: 28.23529
+    TOYOTA_AMBIENT_T_V2: 60
+    TOYOTA_ATMOSPHERE_PRESSURE: 103
+    TOYOTA_CALCULATED_LOAD_7E0: 77.64706
+    TOYOTA_COOLANT_TEMP: 29
+    TOYOTA_ENGINE_RUN_TIME: 48410
+    TOYOTA_ENGINE_SPEED: 16383
+    TOYOTA_INTAKE_AIR: 16
+    TOYOTA_MAF: 655.35
+    TOYOTA_MAP: 79
+    TOYOTA_THROTTLE_MOTOR_DUTY: 0.39216
+    TOYOTA_THROTTLE_SENSOR_POSITION: 28.23529
+    TOYOTA_THROTTLE_SENSOR_VOLT: 63.13725
+    TOYOTA_THROTTL_SENSOR__2_VOLT: 28.62745
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 4405
+    TOYOTA_VEHICLE_LOAD: 0.24109
+    TOYOTA_VEHICLE_SPEED: 0
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 3
+  response: |-
+    7E8101D6101C6009E15
+    7E821134F3864671DF1
+    7E8223700BD1A48A149
+    7E82371480100030011
+    7E82435B60000000000
+- expected_values:
+    TOYOTA_ACCEL_SENS__NO_1_VOLT: 43.52941
+    TOYOTA_ACCEL_SENS__NO_2_VOLT: 27.05882
+    TOYOTA_AMBIENT_T_V2: 59
+    TOYOTA_ATMOSPHERE_PRESSURE: 130
+    TOYOTA_CALCULATED_LOAD_7E0: 80
+    TOYOTA_COOLANT_TEMP: 25
+    TOYOTA_ENGINE_RUN_TIME: 36632
+    TOYOTA_ENGINE_SPEED: 11060
+    TOYOTA_INTAKE_AIR: 23
+    TOYOTA_MAF: 655.35
+    TOYOTA_MAP: 83
+    TOYOTA_THROTTLE_MOTOR_DUTY: 0.78431
+    TOYOTA_THROTTLE_SENSOR_POSITION: 26.66667
+    TOYOTA_THROTTLE_SENSOR_VOLT: 61.56863
+    TOYOTA_THROTTL_SENSOR__2_VOLT: 27.84314
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 7732
+    TOYOTA_VEHICLE_LOAD: 0.21515
+    TOYOTA_VEHICLE_SPEED: 1
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 8
+  response: |-
+    7E8101D6101CC008D0F
+    7E821D6533F6382192B
+    7E82234018F18449D47
+    7E8236F45020008001E
+    7E82434420000000000
+- expected_values:
+    TOYOTA_ACCEL_SENS__NO_1_VOLT: 45.4902
+    TOYOTA_ACCEL_SENS__NO_2_VOLT: 28.62745
+    TOYOTA_AMBIENT_T_V2: 59
+    TOYOTA_ATMOSPHERE_PRESSURE: 130
+    TOYOTA_CALCULATED_LOAD_7E0: 80.78431
+    TOYOTA_COOLANT_TEMP: 29
+    TOYOTA_ENGINE_RUN_TIME: 33049
+    TOYOTA_ENGINE_SPEED: 16383
+    TOYOTA_INTAKE_AIR: 21
+    TOYOTA_MAF: 655.35
+    TOYOTA_MAP: 84
+    TOYOTA_THROTTLE_MOTOR_DUTY: 0.78431
+    TOYOTA_THROTTLE_SENSOR_POSITION: 28.23529
+    TOYOTA_THROTTLE_SENSOR_VOLT: 63.52941
+    TOYOTA_THROTTL_SENSOR__2_VOLT: 29.41176
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 10036
+    TOYOTA_VEHICLE_LOAD: 0.22126
+    TOYOTA_VEHICLE_SPEED: 3
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 9
+  response: |-
+    7E8101D6101CE009113
+    7E8211F543D63821D84
+    7E8223903811948A24B
+    7E82374490200090027
+    7E824341B0000000000
 - expected_values:
     TOYOTA_ACCEL_SENS__NO_1_VOLT: 49.01961
     TOYOTA_ACCEL_SENS__NO_2_VOLT: 32.15686
